# LangPoly-Manager

./: .gitattributes  .gitignore  AGENTS.md  COMMANDS.md  Cargo.toml  README.md
.github/release-notes/: v0.3.0.md  v0.3.1.md
.github/workflows/: ci.yml  release.yml
requirements/: requirements-2026-03-07.md  requirements-2026-03-08.md  requirements-2026-03-09.md
scripts/: analyze_repo.py  cron_jobs.sh  implement_requirements.py
skills/meetai-architecture-insight/: ARCHITECTURE.md  SKILL.md
skills/meetai-architecture-insight/agents/: openai.yaml
skills/meetai-architecture-insight/references/: file-router.md
skills/meetai-rust-code-inspection/: SKILL.md  me.config.json  me.config.template.json
skills/meetai-rust-code-inspection/references/: README.md  step1-naming-convention.md  step2-comment-standard.md  step3-code-quality.md  step4-architecture-layer.md  step5-test-coverage.md  step6-documentation.md  step7-code-commit.md
skills/meetai-rust-code-inspection/tools/: setup-user-info.js
src/: cli.rs  config.rs  lib.rs  main.rs  npm.rs  update.rs
src/node/: installer.rs  mod.rs  project.rs  service.rs  version.rs
src/pip/: manager.rs  mod.rs  version.rs
src/python/: environment.rs  installer.rs  mod.rs  service.rs  version.rs
src/python/installer/: adopt.rs  latest.rs  verify.rs  (+1 more)
src/quick_install/: config.rs  installer.rs  mod.rs  validator.rs
src/runtime/: common.rs  mod.rs
src/utils/: downloader.rs  executor.rs  guidance.rs  http_client.rs  mod.rs  progress.rs  validator.rs
tests/: runtime_node_flow.rs  runtime_python_flow.rs
