[package]
name = "meetai"
version = "0.1.0"
edition = "2021"
authors = ["MeetAI Club <opensource@meetai.club>"]
description = "MeetAI multi-runtime CLI for one-click installation and unified version management"
license = "AGPL-3.0-only"
repository = "https://github.com/meetai-club/meetai"

[dependencies]
# CLI 参数解析
clap = { version = "4.4", features = ["derive"] }

# 异步运行时
tokio = { version = "1.32", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls-webpki-roots"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 进度条显示
indicatif = "0.17"

# 跨平台目录路径
dirs = "5.0"

# 版本号解析
semver = "1.0"

# 正则表达式
regex = "1.9"

# 文件系统操作
fs_extra = "1.3"

# 异步 trait
async-trait = "0.1"

# 日志
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
# 测试
tempfile = "3.7"
